--- a/src/components/account/styles.css
+++ b/src/components/account/styles.css
@@ -2,11 +2,11 @@
   display: flex;
   justify-content: flex-end;
   flex-direction: row;
-  background-color: #fff;
+  background-color: var(--white);
   padding: 10px;
 }
 .account-icon {
-  background-color: #FFE8DF;
+  background-color: var(--orange);
   width: 36px;
   height: 36px;
   border-radius: calc(36/2 * 1px);
