--- a/src/components/edit/styles.css
+++ b/src/components/edit/styles.css
@@ -13,8 +13,8 @@
   height: 760px;
   top: 120px;
   border-radius: 10px;
-  background-color: #fff;
-  box-shadow: 6px 6px 54px rgba(0, 0, 0, 0.05);
+  background-color: var(--white);
+  box-shadow: 6px 6px 54px var(--grey);
 }
 .input-section {
   display: flex;
@@ -38,7 +38,7 @@
   font-size: 13px;
 }
 .input-border {
-  border-bottom: 1.5px solid #624DE3;
+  border-bottom: 1.5px solid var(--main-purple);
   border-top: 0px;
   border-right: 0px;
   border-left: 0px;
@@ -55,7 +55,7 @@
   justify-content: center;
   margin-top: 40px;
   align-items: center;
-  background-color: #F9FAFF;
+  background-color: var(--light-purple);
   width: 1078px;
   height: 104px;
 }
