--- a/src/components/person/styles.css
+++ b/src/components/person/styles.css
@@ -1,13 +1,14 @@
+
 /* person */
 .person-container {
-  box-shadow: 6px 6px 54px rgba(0, 0, 0, 0.05);
+  box-shadow: 6px 6px 54px var(--grey);
   border-radius: 10px;
   background-color: #fff;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 1078px;
+  width: 95%;
   height: 112px;
   margin-top: 20px;
   padding-right: 10px;
@@ -23,7 +24,7 @@
   font-style: normal;
   font-weight: 600;
   font-size: 18px;
-  color: #00234B;
+  color: var(--blue);
   margin: 0px;
   padding: 0px;
 }
