fine tuning colors and color variables

--- a/src/App.css
+++ b/src/App.css
@@ -12,5 +12,6 @@
   --white: #fff;
   --light-grey: #E5E5E5;
   --orange: #FFE8DF;
+  --black: #778CA3;
   --puple-border: 2px solid rgba(98, 77, 227, 0.3);
 }
