--- a/src/components/account/styles.css
+++ b/src/components/account/styles.css
@@ -15,8 +15,11 @@
   display: flex;
   flex-direction: column;
   margin-left: 20px;
+  margin-right: 100px;
 }
 .account-text {
   margin: 0px;
   padding: 0px;
+  color: var(--black);
+  text-align: left;
 }
