--- a/src/components/peopleTable/styles.css
+++ b/src/components/peopleTable/styles.css
@@ -4,9 +4,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-left: 15px;
-  margin-right: 15px;
-  margin-top: 10px;
+  margin-left: 8%;
+  margin-right: 8%;
+  margin-top: 20px;
 }
 .people-list {
   display: flex;
@@ -16,8 +16,14 @@
 }
 table {
   border-spacing: 0px 20px;
-  margin-left: 3%;
-  min-width: 95%;
+  margin-left: 8%;
+  min-width: 85%;
+}
+@media only screen and (min-width: 900px) and (max-width: 950px) {
+  table {
+    margin-left: 5%;
+    min-width: 90%;
+  }
 }
 @media only screen and (max-width: 900px) {
   thead {
@@ -27,7 +33,7 @@ table {
 tbody tr {
   box-shadow: 6px 6px 54px var(--grey);
   border-radius: 10px;
-  background-color: #fff;
+  background-color: var(--white);
   padding: 10px;
   margin: 10px;
   height: 112px;
@@ -51,6 +57,11 @@ td {
   white-space: nowrap;
   font-size: 12px;
   text-align: left;
+  color: var(--black);
+}
+thead td {
+  padding-bottom: 0px;
+  font-weight: 600;
 }
 @media only screen and (max-width: 900px) {
   tbody tr td {
@@ -71,4 +82,5 @@ th:last-child {
   font-weight: 500;
   font-style: normal;
   font-size: 13px;
+  color: var(--black);
 }
