--- a/src/components/account/styles.css
+++ b/src/components/account/styles.css
@@ -20,6 +20,7 @@
 .account-text {
   margin: 0px;
   padding: 0px;
-  color: var(--black);
+  color: var(--blue);
   text-align: left;
+  font-weight: 600;
 }
